--- a/index.css
+++ b/index.css
@@ -40,6 +40,7 @@
     height: 40px;
     width: 30%;
     transition: 300ms;
+    font-weight: bold;
 }
 
 .heading
@@ -86,7 +87,7 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    transition: 100ms;
+    transition: 300ms;
 }
 
 .lang-active
@@ -97,6 +98,29 @@
 .btn:hover
 {
     background-color: rgb(128, 0, 0);
+}
+
+.dialogue
+{
+    display: none;
+    color: whitesmoke;
+    border: none;
+    background-color: rgb(20, 20, 20);
+    border-radius: 10px;
+    position: absolute;
+    width: 40%;
+    max-width: 300px;
+    right: 10px;
+    bottom: 10px;
+    z-index: 999;
+    padding-inline: 20px;
+    opacity: 0;
+    transition: 1000ms;
+}
+
+.dialogue-active
+{
+    opacity: 100%;
 }
 
 @media (max-width: 767px)
@@ -163,6 +187,11 @@
     {
         width: 70%;
         margin-inline: 15%;
+    }
+
+    .heading
+    {
+        font-size: large;
     }
 }
 
